# Lame-Pigeon

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: FUNDING.yml
Carrier/: Main.cpp
Carrier/private/: Carrier.cpp
Carrier/public/: Carrier.h  LamePigeonProtocol.h
DemoProject/ReplicationProject/: ReplicationProject.sln  ReplicationProject.uproject
DemoProject/ReplicationProject/Config/: DefaultEngine.ini  DefaultGame.ini
DemoProject/ReplicationProject/Plugins/LamePigeon/: LamePigeon.uplugin
DemoProject/ReplicationProject/Source/: ReplicationProject.Target.cs  ReplicationProjectEditor.Target.cs
DemoProject/ReplicationProject/Source/LamePigeonDemo/: LamePigeonDemo.Build.cs  LamePigeonDemo.cpp  LamePigeonDemo.h  LamePigeonDemoCharacter.cpp  LamePigeonDemoCharacter.h  LamePigeonDemoConstants.h  LamePigeonDemoGameMode.cpp  LamePigeonDemoGameMode.h  LamePigeonDemoHealthWidget.cpp  LamePigeonDemoHealthWidget.h  LamePigeonDemoPlayerController.cpp  LamePigeonDemoPlayerController.h  LamePigeonDemoReplicationComponent.cpp  LamePigeonDemoReplicationComponent.h  LamePigeonDemoWorldHealthBillboardComponent.cpp  LamePigeonDemoWorldHealthBillboardComponent.h  LamePigeonDemoWorldHealthWidget.cpp  LamePigeonDemoWorldHealthWidget.h
Dovecote/: Main.cpp
Dovecote/private/: Birdhouse.cpp  Dovecote.cpp  SpaceGrid.cpp
Dovecote/public/: Birdhouse.h  Dovecote.h  DovecoteConfig.h  LamePigeonProtocol.h  SpaceGrid.h  Squab.h
Flock/: CMakeLists.txt  Main.cpp
build-cleanup/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Carrier.vcxproj  Carrier.vcxproj.filters  Dovecote.vcxproj  Dovecote.vcxproj.filters  Flock.vcxproj  Flock.vcxproj.filters  LamePigeon.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  enet.vcxproj  enet.vcxproj.filters
build-cleanup/Carrier.dir/Release/: Carrier.exe.recipe
build-cleanup/Carrier.dir/Release/Carrier.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-cleanup/Debug/: enet.lib
build-cleanup/Dovecote.dir/Debug/: Dovecote.exe.recipe  Dovecote.ilk
build-cleanup/Dovecote.dir/Debug/Dovecote.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Dovecote.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-cleanup/Dovecote.dir/Release/: Dovecote.exe.recipe
build-cleanup/Dovecote.dir/Release/Dovecote.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-cleanup/Flock.dir/Release/: Flock.exe.recipe
build-cleanup/Flock.dir/Release/Flock.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-cleanup/Release/: enet.lib
build-cleanup/enet.dir/Debug/: enet.lib.recipe
build-cleanup/enet.dir/Debug/enet.tlog/: CL.command.1.tlog  CL.read.1.tlog  (+7 more)
(+42 files in other folders)
